@@ -1,3 +1,11 @@
+Tue Apr 12 18:31:29 2005  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstfiledialog.c: import MIDI files via
+	bst_project_import_midi_file().
+
+	* beast-gtk/bstbseutils.[hc]: provide bst_project_import_midi_file(),
+	which ensures properly setup songs (with mixer and no orphaned parts).
+
 Mon Apr 11 00:51:33 2005  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/dialogs/radgets-standard.xml: support $show-tabs 
